--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
     "@types/three": "^0.170.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "tailwind-merge": "^2.5.4",
     "three": "^0.170.0"
   },
   "devDependencies": {
